--- a/tickets/css/form2.css
+++ b/tickets/css/form2.css
@@ -146,7 +146,7 @@ label.highlight {
 input, textarea ,select {
     font-size: 22px;
     display: inline;
-    width: 12vw;
+    width: 22vw;
     height: 100%;
     padding: 5px 10px;
     background: none;
@@ -156,6 +156,18 @@ input, textarea ,select {
     border-radius: 0;
     transition: border-color 0.25s ease, box-shadow 0.25s ease;
 }
+
+@media screen and (max-width: 400px) {
+    #OdatePicker {
+      width: 50vw;
+    }
+  }
+@media screen and (max-width: 600px) {
+#OdatePicker {
+    width: 40vw;
+}
+}
+
 #dateRange {
     margin: 0 auto; /* 设置左右外边距为 auto */
     display: block; /* 确保 select 以块级元素显示 */
