成通傳送給後台之後modal('show')

--- a/tickets/css/bootstrap.css
+++ b/tickets/css/bootstrap.css
@@ -10674,6 +10674,9 @@ button.bg-dark:focus {
 .text-blue {
   color: #007bff !important;
 }
+.text-blue2 {
+  color:#244dde;
+}
 
 .text-orange {
   color: #fd7e14 !important;
