--- a/tickets/css/refun.css
+++ b/tickets/css/refun.css
@@ -1209,6 +1209,116 @@ footer ul {
 /*=============================================
 =                   日曆            =
 =============================================*/
+.card {
+  border-radius: 1.25rem;
+  border: 2px solid #20bb94;
+}
+
+/*=============================================
+=                               =
+=============================================*/
+/* *, *:before, *:after {
+  box-sizing: border-box;
+} */
 
 
 
+.tab_div{
+  margin: 0;
+  font-family: arial;
+  height: 100vh;
+  background: #ccc;
+}
+.tab-container {
+  list-style-type: none;
+  padding: 0;
+  margin: 60px auto;
+  max-width: 350px;
+  position: relative;
+  background: #fff;
+}
+.tab-container ul {
+  list-style-type: none;
+  padding: 0;
+}
+.tab-container .arrows {
+  display: block;
+  width: 60px;
+  font-size: 32px;
+  bottom: 10px;
+  right: 0px;
+  position: absolute;
+}
+.tab-container .arrows label {
+  display: inline-block;
+  cursor: pointer;
+  color: #aaa;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-left: 5px;
+}
+.tab-container .arrows label:hover {
+  color: #333;
+}
+.tab-container .tab-content-container {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  line-height: 22px;
+  background: #fff;
+  position: absolute;
+  top: 42px;
+  padding: 0px 40px 0 20px;
+  border: 2px solid #446cb3;
+  border-top: 0;
+  box-shadow: 0 5px 5px -5px #333;
+}
+.tab-container .tab-content-container .tab-content {
+  opacity: 0;
+  padding: 15px 0;
+  min-height: 185px;
+  transition: opacity 0.1s ease-in;
+}
+.tab-container .tab {
+  outline: 0;
+  float: left;
+  cursor: pointer;
+  opacity: 1;
+  width: 25%;
+  line-height: 40px;
+  display: block;
+  margin: 0;
+  position: relative;
+  background: #446cb3;
+  color: #fff;
+  text-align: center;
+  border-top: 2px solid #446cb3;
+  border-right: 2px solid #446cb3;
+}
+.tab-container .tab.l-b {
+  border-left: 2px solid #446cb3;
+}
+.tab-container .tab:hover {
+  background: #365690;
+}
+.tab-container .tab-toggle {
+  display: none;
+}
+.tab-container .tab-toggle.active + .tab, .tab-container .tab-toggle:checked + .tab {
+  background: #fff;
+  color: #333;
+}
+.tab-container .tab-toggle.active ~ .tab-content-container, .tab-container .tab-toggle:checked ~ .tab-content-container {
+  height: auto;
+  opacity: 1;
+}
+.tab-container .tab-toggle.active ~ .tab-content-container .tab-content, .tab-container .tab-toggle:checked ~ .tab-content-container .tab-content {
+  opacity: 1;
+}
+.tab-container .tab-toggle.active ~ .tab-content-container .tab-content label, .tab-container .tab-toggle:checked ~ .tab-content-container .tab-content label {
+  opacity: 1;
+}
