--- a/tickets/css/teamlist2.css
+++ b/tickets/css/teamlist2.css
@@ -2143,84 +2143,29 @@ body {
 =                 projects-section            =
 =============================================*/
 
-#example_wrapper{
-  
+.dt-button {
+  padding: 10px;
+  border: 2px solid;
+  margin: 5px;
+}
+
+.form-inline {
+  display: contents;
+  padding: 1rem;
+}
+
+.table-responsive {
   display: block;
+  width: 95%;
+  margin: 1rem;
 }
 
 #example_filter{
 
+  display: none;
+
 }
 
-.tableall {
-	margin: 2em;
-  display:block;
-}
-
-.table-bordered.card {
-	border: 0 !important;
-}
-.card thead {
-	display: none;
-}
-
-.card tbody tr {
-	float: left;
-	width: 25em;
-	margin: 0.5em;
-	border: 1px solid #bfbfbf;
-	border-radius: 0.5em;
-	background-color: transparent !important;
-	box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
-}
-.card tbody tr td {
-	display: block;
-	border: 0;
-}
-
-p {
-	text-align: center;
-	color: limegreen;
-	font-size: 1.5em;
-	font-weight: bold;
-	text-shadow: 1px 1px 2px #000;
-	margin-bottom: 1.2em;
-}
-
-.dt-buttons {
-	margin-bottom: 10px;
-}
-.dt-buttons.btn-group{
-	float: right;
-	margin-right: 0%;
-}
-.dataTables_filter {
-	float: left;
-	margin-top: 4px;
-	margin-right: 2%;
-	text-align: left;
-}
-.dataTables_info {
-	float: right;
-}
-.dataTables_length{
-	float: right;
-	margin-top: 4px;
-	margin-left: 2%;
-}
-
-/* .form-inline {
-  display: block;
-} */
-
-#example_filter {
-  position: relative;
-  display: block;
-  transform: translateY(6px);
-}
-
-thead input {
-	width: 100%;
-	padding: 3px;
-	box-sizing: border-box;
-}
+/*=============================================
+=                 new           =
+=============================================*/
